# Hydro-SE-Bench

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_SETUP.md  INSTALL.md  LICENSE  PRE_UPLOAD_CHECKLIST.md  QUICKSTART.md  README.md  UPLOAD_SUMMARY.md  USAGE.md  calc_and_save.py  final_stats.py  requirements.txt
.github/workflows/: ci.yml
examples/: FOLDER_STRUCTURE_GUIDE.md  README.md  example_0_download_data.py  example_1_basic_evaluation.py  example_2_batch_evaluation.py  example_3_custom_benchmark.py  example_4_sampling.py  example_5_complete_workflow.py  test.csv  utils.py
examples/scripts/: .gitkeep
hydrobench-eval/: LICENSE  MANIFEST.in  README.md  SETUP_API_TOKEN.md  pyproject.toml
hydrobench-eval/hydrobench/: __init__.py  batch_evaluate.py  benchmark.py  cli.py  datasets.py  excel_loader.py  reporting.py  sampling.py  scoring.py
hydrobench-eval/hydrobench/data/: hydrobench.csv  hydrobench.json
hydrosebench-eval/: MANIFEST.in  README.md  SETUP_API_TOKEN.md  pyproject.toml
hydrosebench-eval/hydrosebench/: __init__.py  batch_evaluate.py  benchmark.py  cli.py  datasets.py  excel_loader.py  reporting.py  sampling.py  scoring.py
hydrosebench-eval/hydrosebench/data/: __init__.py  hydrosebench.csv  hydrosebench.json
